--- a/hooks/main.hook.yml
+++ b/hooks/main.hook.yml
@@ -1,6 +1,6 @@
 - name: "[hook] {{ hook_name }}"
   debug:
-    var: env.ctx
+    msg: "project [{{ env_project }}] - ctx [{{ env_ctx }}]"
   tags: ["no_print_skipped"]
 
 - name: "[hook] {{ hook_name }} - host included"
