--- a/roles/role2/tasks/main.yml
+++ b/roles/role2/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: "[custom_role] - inside role2 ({{ custom_role_info }})"
   debug:
-    var: env.ctx
+    msg: "project [{{ env_project }}] - ctx [{{ env_ctx }}]"
