--- a/tasks/task2.yml
+++ b/tasks/task2.yml
@@ -1,3 +1,3 @@
 - name: "[custom_task] - inside task2 ({{ custom_task_info }})"
   debug:
-    var: env.ctx
+    msg: "project [{{ env_project }}] - ctx [{{ env_ctx }}]"
