--- a/tasks/task1.yml
+++ b/tasks/task1.yml
@@ -1,3 +1,3 @@
 - name: "[custom_task] - inside task1 ({{ custom_task_info }})"
   debug:
-    msg: "project [{{ env_project }}] - ctx [{{ env_ctx }}]"
+    msg: "project [{{ env_project }}] - name [{{ env.name }}] - ctx [{{ env_ctx }}]"
