--- a/test/services/01.yml
+++ b/test/services/01.yml
@@ -2,3 +2,8 @@
   debug:
     var: cloud_service_params
   tags: ["no_print_skipped"]
+
+- name: "{{ cloud_service_title }} - print (test) - 01"
+  debug:
+    var: cloud_service_credentials
+  tags: ["no_print_skipped"]
