--- a/tasks/dns/cloudflare.main.dns.yml
+++ b/tasks/dns/cloudflare.main.dns.yml
@@ -1,27 +1,33 @@
-- name: >-
-    {{ cloud_dns_title }} - cloudflare dns - create record -
-    [{{ cloud_dns_record_type }}] {{ cloud_dns_record }}
-  include_tasks: "cloudflare.record.dns.yml"
-  vars:
-    cloud_dns_value: "{{ cloud_dns_item.value }}"
-    cloud_dns_solo: "{{ cloud_dns_index == 0 }}"
-    cloud_dns_final_state: "present"
-  loop: "{{ cloud_dns_data_list | default([]) | flatten(levels=1) }}"
-  loop_control:
-    loop_var: cloud_dns_item
-    index_var: cloud_dns_index
-    label: "{{ cloud_dns_index }}"
-  when: cloud_dns_state == 'present'
+- name: "{{ cloud_service_title | default('') }} - dns - cloudflare"
+  set_fact:
+    cloud_service_dns_title: "{{ cloud_service_title }} - dns - cloudflare"
+    cloud_service_dns_credentials: "{{ cloud_service_credentials.dns | default({}) }}"
   tags: ["no_print"]
 
 - name: >-
-    {{ cloud_dns_title }} - cloudflare dns - delete record -
-    [{{ cloud_dns_record_type }}] {{ cloud_dns_record }}
+    {{ cloud_service_dns_title }} - create record -
+    [{{ cloud_service_dns_record_type }}] {{ cloud_service_dns_record }}
   include_tasks: "cloudflare.record.dns.yml"
   vars:
-    cloud_dns_solo: false
-    cloud_dns_final_state: "absent"
+    cloud_service_dns_value: "{{ cloud_service_dns_item.value }}"
+    cloud_service_dns_solo: "{{ cloud_service_dns_index == 0 }}"
+    cloud_service_dns_final_state: "present"
+  loop: "{{ cloud_service_dns_data_list | default([]) | flatten(levels=1) }}"
+  loop_control:
+    loop_var: cloud_service_dns_item
+    index_var: cloud_service_dns_index
+    label: "{{ cloud_service_dns_index }}"
+  when: cloud_service_dns_state == 'present'
+  tags: ["no_print"]
+
+- name: >-
+    {{ cloud_service_dns_title }} - delete record -
+    [{{ cloud_service_dns_record_type }}] {{ cloud_service_dns_record }}
+  include_tasks: "cloudflare.record.dns.yml"
+  vars:
+    cloud_service_dns_solo: false
+    cloud_service_dns_final_state: "absent"
   when: >-
-    (cloud_dns_state == 'absent') or 
-    ((cloud_dns_data_list | default([]) | length) == 0)
+    (cloud_service_dns_state == 'absent') or
+    ((cloud_service_dns_data_list | default([]) | length) == 0)
   tags: ["no_print"]
