--- a/tasks/dns/godaddy.record.dns.yml
+++ b/tasks/dns/godaddy.record.dns.yml
@@ -1,47 +1,47 @@
-- name: "{{ cloud_dns_title }} - define the new record"
+- name: "{{ cloud_service_dns_title }} - define the new record"
   set_fact:
-    cloud_dns_godaddy_record_aux:
-      type: "{{ cloud_dns_record_type }}"
-      name: "{{ cloud_dns_record }}"
-      data: "{{ cloud_dns_item.value | default('') }}"
-      ttl: "{{ cloud_dns_item.ttl | default('') }}"
-      priority: "{{ cloud_dns_item.priority | default('') }}"
-      service: "{{ cloud_dns_item.service | default('') }}"
-      protocol: "{{ cloud_dns_item.protocol | default('') }}"
-      port: "{{ cloud_dns_item.port | default('') }}"
-      weight: "{{ cloud_dns_item.weight | default('') }}"
+    cloud_service_dns_godaddy_record_aux:
+      type: "{{ cloud_service_dns_record_type }}"
+      name: "{{ cloud_service_dns_record }}"
+      data: "{{ cloud_service_dns_item.value | default('') }}"
+      ttl: "{{ cloud_service_dns_item.ttl | default('') }}"
+      priority: "{{ cloud_service_dns_item.priority | default('') }}"
+      service: "{{ cloud_service_dns_item.service | default('') }}"
+      protocol: "{{ cloud_service_dns_item.protocol | default('') }}"
+      port: "{{ cloud_service_dns_item.port | default('') }}"
+      weight: "{{ cloud_service_dns_item.weight | default('') }}"
   tags: ["no_print"]
 
-- name: "{{ cloud_dns_inner_title }} - empty record"
-  set_fact: 
-    cloud_dns_godaddy_record: {}
+- name: "{{ cloud_service_dns_inner_title }} - empty record"
+  set_fact:
+    cloud_service_dns_godaddy_record: {}
   tags: ["no_print"]
 
-- name: "{{ cloud_dns_inner_title }} - define the record without empty fields"
-  set_fact: 
-    cloud_dns_godaddy_record: >-
-      {{ 
-      cloud_dns_godaddy_record | combine({ 
-      cloud_dns_godaddy_item.key: cloud_dns_godaddy_item.value }) 
+- name: "{{ cloud_service_dns_inner_title }} - define the record without empty fields"
+  set_fact:
+    cloud_service_dns_godaddy_record: >-
+      {{
+      cloud_service_dns_godaddy_record | combine({
+      cloud_service_dns_godaddy_item.key: cloud_service_dns_godaddy_item.value })
       }}
-  loop: "{{ cloud_dns_godaddy_record_aux | default({}) | dict2items | list }}"
+  loop: "{{ cloud_service_dns_godaddy_record_aux | default({}) | dict2items | list }}"
   loop_control:
-    loop_var: cloud_dns_godaddy_item
-    label: "{{ cloud_dns_godaddy_item.key }}"
-  when: cloud_dns_godaddy_item.value != ''
+    loop_var: cloud_service_dns_godaddy_item
+    label: "{{ cloud_service_dns_godaddy_item.key }}"
+  when: cloud_service_dns_godaddy_item.value != ''
   tags: ["no_print"]
 
-- name: "{{ cloud_dns_inner_title }} - define the record without empty fields"
-  set_fact: 
-    cloud_dns_godaddy_record: >-
-      {{ 
-      cloud_dns_godaddy_record | 
-      combine({ 'ttl': cloud_dns_godaddy_record.ttl | default(600) | int }) 
+- name: "{{ cloud_service_dns_inner_title }} - define the record without empty fields"
+  set_fact:
+    cloud_service_dns_godaddy_record: >-
+      {{
+      cloud_service_dns_godaddy_record |
+      combine({ 'ttl': cloud_service_dns_godaddy_record.ttl | default(600) | int })
       }}
   tags: ["no_print"]
 
 - name:
   set_fact:
-    cloud_dns_godaddy_records: >-
-      {{ cloud_dns_godaddy_records + [cloud_dns_godaddy_record] }}
+    cloud_service_dns_godaddy_records: >-
+      {{ cloud_service_dns_godaddy_records + [cloud_service_dns_godaddy_record] }}
   tags: ["no_print"]
