--- a/tasks/dns/nsupdate.main.dns.yml
+++ b/tasks/dns/nsupdate.main.dns.yml
@@ -1,13 +1,19 @@
+- name: "{{ cloud_service_title | default('') }} - dns - nsupdate"
+  set_fact:
+    cloud_service_dns_title: "{{ cloud_service_title }} - dns - nsupdate"
+    cloud_service_dns_credentials: "{{ cloud_service_credentials.dns | default({}) }}"
+  tags: ["no_print"]
+
 - name: >-
-    {{ cloud_dns_title }} - nsupdate - create record -
-    [{{ cloud_dns_record_type }}] {{ cloud_dns_record }}
+    {{ cloud_service_dns_title }} - create record -
+    [{{ cloud_service_dns_record_type }}] {{ cloud_service_dns_record }}
   nsupdate:
-    key_name: "{{ cloud_dns_credentials.key_name }}"
-    key_secret: "{{ cloud_dns_credentials.key_secret }}"
-    key_algorithm: "{{ cloud_dns_credentials.key_algorithm }}"
-    server: "{{ cloud_dns_credentials.server }}"
-    zone: "{{ cloud_dns_zone }}"
-    type: "{{ cloud_dns_record_type }}"
-    record: "{{ cloud_dns_record }}"
-    value: "{{ cloud_dns_data_list | default([]) | map(attribute='value') }}"
-    state: "{{ cloud_dns_state }}"
+    key_name: "{{ cloud_service_dns_credentials.key_name }}"
+    key_secret: "{{ cloud_service_dns_credentials.key_secret }}"
+    key_algorithm: "{{ cloud_service_dns_credentials.key_algorithm }}"
+    server: "{{ cloud_service_dns_credentials.server }}"
+    zone: "{{ cloud_service_params.zone }}"
+    type: "{{ cloud_service_dns_record_type }}"
+    record: "{{ cloud_service_dns_record }}"
+    value: "{{ cloud_service_dns_data_list | default([]) | map(attribute='value') }}"
+    state: "{{ cloud_service_dns_state }}"
