[dev] cloud services

--- a/test/services/01.yml
+++ b/test/services/01.yml
@@ -1,9 +1,14 @@
-- name: "{{ cloud_service_title }} - print (test) - 01"
+- name: "{{ cloud_service_title }} - print (test) - 01 - params"
   debug:
     var: cloud_service_params
   tags: ["no_print_skipped"]
 
-- name: "{{ cloud_service_title }} - print (test) - 01"
+- name: "{{ cloud_service_title }} - print (test) - 01 - credentials"
   debug:
     var: cloud_service_credentials
+  tags: ["no_print_skipped"]
+
+- name: "{{ cloud_service_title }} - print (test) - 01 - state"
+  debug:
+    var: cloud_service_state
   tags: ["no_print_skipped"]
