--- a/test/services/02.yml
+++ b/test/services/02.yml
@@ -1,9 +1,14 @@
-- name: "{{ cloud_service_title }} - print (test) - 02"
+- name: "{{ cloud_service_title }} - print (test) - 02 - params"
   debug:
     var: cloud_service_params
   tags: ["no_print_skipped"]
 
-- name: "{{ cloud_service_title }} - print (test) - 02"
+- name: "{{ cloud_service_title }} - print (test) - 02 - credentials"
   debug:
     var: cloud_service_credentials
+  tags: ["no_print_skipped"]
+
+- name: "{{ cloud_service_title }} - print (test) - 02 - state"
+  debug:
+    var: cloud_service_state
   tags: ["no_print_skipped"]
